2012-01-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Fix regression introduced in
	2011-12-29 commit. We can't use mod_s, because the module
	which sets up that variable is not yet initialized.

2012-01-01  Kaz Kylheku  <kaz@kylheku.com>

	Make C globals in TXR Lisp properly assignable, so that for instance
	assigning *stdout*, it really overwrites the underlying C variable.

	* eval.c (lookup_var): Handle new kind of toplevel binding.
	If the hash value is a cptr, it points to a val storage location.
	(lookup_val_l): New function.
	(op_modplace): Get location of variable using lookup_val_l
	rather than assuming there is a cons-based binding.
	(reg_var): Argument changed to val * pointer.
	Register the variable as a cptr referencing the location.
	(eval_init): reg_var calls pass address of each global.

	* eval.h (lookup_var_l): Declared.

2012-01-01  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New gensym function registered.

	* lib.c (gensym_counter): New variable.
	(gensymv): New function.
	(obj_init): Initialize gensym_counter.

	* lib.h (gensym_counter, gensymv): Declared.

2011-12-30  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (counter_k): New keyword symbol variable.
	(do_output_line): Process new :counter argument of rep.
	(do_output): Ditto, for repeat.
	(syms_init): Intern new keyword symbol.

	* match.h (counter_k): Declared.

	* parser.l (REPEAT, REP): Lexical syntax changed to
	allow arguments.

	* parser.y (repeat_rep_helper): Takes extra argument, representing
	the repeat/rep args. This is inserted into the second position
	of the output list.
	(repeat_clause, rep_elem): Extract repeat/rep arguments and
	pass to repeat_rep_helper.
	(yybadtoken): Do not put quotes around the word "number".

	* txr.1: Updated.

2011-12-29  Kaz Kylheku  <kaz@kylheku.com>

	New functionality: mod and modlast directives in repeat and rep.

	* eval.c (eval_init): Use new symbol variable mod_s instead
	of calling intern.
